<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socially</string>

    <!--    Strings for Sign Up page-->

    <string name="create_account_title">Create Account</string>
    <string name="create_account_subtitle">Create a new account</string>
    <string name="back_button_desc">Back button</string>
    <string name="profile_picture_desc">Profile picture placeholder</string>
    <string name="camera_button_desc">Camera icon button</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_button">Create Account</string>


    <!--    Strings for switch accounts page-->

    <string name="socially_title">Socially</string>
    <string name="user_name">jacob_w</string>
    <string name="log_in_button">Log in</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>

    <!--    Strings for Home page-->

    <string name="your_story">Your Story</string>
    <string name="karennne">karennne</string>
    <string name="zackjohn">zackjohn</string>
    <string name="kieron_d">kieron_d</string>
    <string name="craig_d">craig_d</string>
    <string name="joshua_l">joshua_l</string>
    <string name="tokyo_japan">Tokyo, Japan</string>
    <string name="liked_by">Liked by</string>
    <string name="craig_love">craig_love</string>
    <string name="others_count">and 44,686 others</string>
    <string name="post_caption">The game in Japan was amazing and I want to share some photos</string>
    <string name="post_caption2">\"Jinhe Lahore nahi dekhya wo jamya nahi\" is the first line I learnt Pakistan</string>
    <string name="image_counter">1/3</string>

    <!--    Strings for Explore page-->
    <string name="search_hint">Search</string>
    <string name="shop">Shop</string>
    <string name="style">Style</string>
    <string name="sports">Sports</string>
    <string name="auto">Auto</string>
    <string name="music">Music</string>

    <!--    Strings for Search page-->
    <string name="clear_text">Clear</string>
    <string name="tab_top">Top</string>
    <string name="tab_accounts">Accounts</string>
    <string name="tab_tags">Tags</string>
    <string name="tab_places">Places</string>
    <string name="internshala_name">internshala</string>
    <string name="internshala_description">internshala</string>
    <string name="hashtag_internshala">#internshala</string>
    <string name="post_count_1000">1000+ post</string>
    <string name="hashtag_nomoretheory">#internshala_nomoretheory_challange</string>
    <string name="post_count_500">500+ post</string>
    <string name="post_count_100">100+ post</string>
    <string name="internshala_place">Internshala, B-610, Untech Business Zone,....</string>

    <!--    Strings for DM page-->
    <string name="back_arrow_desc">Back Arrow</string>
    <string name="add_icon_desc">Add new chat</string>
    <string name="username">jacob_w</string>
    <string name="joshua_l_message">Have a nice day, bro!</string>
    <string name="karennne_message">I heard this is a good movie, s...</string>
    <string name="martini_rond">martini_rond</string>
    <string name="martini_message">See you on the next meeting!</string>
    <string name="andrew_message">Sounds good 😂😂😂</string>
    <string name="kiero_d_message">The new design looks cool, b...</string>
    <string name="maxjacobson">maxjacobson</string>
    <string name="max_message">Thank you, bro!</string>
    <string name="message_time_now">now</string>
    <string name="message_time_15m">15m</string>
    <string name="message_time_20m">20m</string>
    <string name="message_time_1m">1m</string>
    <string name="message_time_2h">2h</string>
    <string name="camera_text">Camera</string>

    <!--    Strings for Personal DM page-->
    <string name="video_call_desc">Video Call</string>
    <string name="info_desc">Info</string>
    <string name="message_time">4:49 PM</string>
    <string name="hello_message">Hello</string>
    <string name="message_input_hint">Message…</string>
    <string name="camera_input_desc">Camera</string>

    <!--    Strings for Video Call page-->
    <string name="mother_name">Mommy</string>
    <string name="call_duration">03:12</string>
    <string name="end_call_desc">End Call</string>
    <string name="audio_desc">Audio</string>
    <string name="options_desc">Options</string>

    <!--Strings for Notification Follower page-->
    <string name="following_tab">Following</string>
    <string name="you_tab">You</string>
    <string name="liked_posts">liked 2 posts.</string>
    <string name="liked_photo">liked a photo.</string>
    <string name="started_following">started following You.</string>
    <string name="liked_comments">liked your comment: @jermy haha</string>
    <string name="time_3h">. 3h</string>
    <string name="commented_post">commented on your post</string>
    <string name="time_1h">1h ago</string>
    <string name="qaidino804">qaidino804</string>
    <string name="shared_story">shared your story</string>
    <string name="time_6h">6h ago</string>
    <string name="lisa">lisa</string>
    <string name="sent_message">sent you a message</string>
    <string name="time_12h">12h ago</string>

    <!--    Strings for Notification You page-->
    <string name="follow_requests">Follow Requests</string>
    <string name="new_label">New</string>
    <string name="today_label">Today</string>
    <string name="this_week_label">This Week</string>
    <string name="this_month_label">This Month</string>
    <string name="liked_your_photo">liked your photo.</string>
    <string name="liked_your_photo_multiple">liked your photo.</string>
    <string name="mentioned_you">mentioned you in a comment:</string>
    <string name="started_following_you">started following you.</string>
    <string name="message_button">Message</string>
    <string name="follow_button">Follow</string>
    <string name="commented_on_post">commented on your post</string>
    <string name="shared_your_story">shared your story</string>
    <string name="sent_you_message">sent you a message</string>
    <string name="liked_your_video">liked your video</string>

    <!--    Strings for Self Profile page-->
    <string name="profile_username">jacob_w</string>
    <string name="profile_posts">54\nPosts</string>
    <string name="profile_followers">834\nFollowers</string>
    <string name="profile_following">162\nFollowing</string>
    <string name="profile_name">Jacob West</string>
    <string name="profile_description">Digital goodies designer @pixsellz\nEverything is designed.</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="stories_new">New</string>
    <string name="stories_friends">Friends</string>
    <string name="stories_sport">Sport</string>
    <string name="stories_design">Design</string>
    <string name="stories_travel">Travel</string>
    <string name="stories_food">Food</string>
    <string name="stories_pets">Pets</string>
    <string name="stories_memories">Memories</string>

    <!--    Strings for Edit Profile page-->
    <string name="cancel_button">Cancel</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="done_button">Done</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="website_label">Website</string>
    <string name="bio_label">Bio</string>
    <string name="website_hint">Website</string>
    <string name="name_value">Jacob West</string>
    <string name="username_value">jacob_w</string>
    <string name="bio_value">Digital goodies designer @pixsellz\nEverything is designed.</string>
    <string name="switch_to_professional">Switch to Professional Account</string>
    <string name="private_information_label">Private Information</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="gender_label">Gender</string>
    <string name="email_value">jacob.west@gmail.com</string>
    <string name="phone_value">+1 202 555 0147</string>
    <string name="gender_value">Male</string>

    <!--    Strings for View Highlight page-->
    <string name="highlight_title">Highlight</string>
    <string name="highlight_date">December 3, 2023</string>
    <string name="highlight_artist_song">♬ Artist • Song Title</string>
    <string name="nav_activity_label">Activity</string>
    <string name="nav_create_label">Create</string>
    <string name="nav_create_post_label">Create Post</string>
    <string name="nav_browse_label">Browse</string>
    <string name="nav_send_label">Send</string>
    <string name="nav_more_label">More</string>

    <!--    Strings for Story Take page-->
    <string name="camera_type">TYPE</string>
    <string name="camera_live">LIVE</string>
    <string name="camera_normal">NORMAL</string>
    <string name="camera_boomerang">BOOMERANG</string>
    <string name="gallery_icon_desc">Gallery</string>
    <string name="flash_icon_desc">Flash</string>
    <string name="camera_capture_desc">Capture button</string>
    <string name="camera_switch_desc">Switch camera</string>
    <string name="smiley_desc">Smiley</string>
    <string name="heart_desc">Heart</string>
    <string name="camera_video">Video</string>

    <!--    Strings for Story View Others page-->
    <string name="story_username">craig_love</string>
    <string name="story_time_ago">4h</string>
    <string name="send_message_hint">Send Message</string>

    <!--    Strings for Story View Own page-->
    <string name="own_story_username">gursky.studio</string>
    <string name="own_story_time_ago">11h</string>
    <string name="bottom_activity">Activity</string>
    <string name="bottom_create">Create</string>
    <string name="bottom_facebook">Facebook</string>
    <string name="bottom_highlight">Highlight</string>
    <string name="bottom_more">More</string>

    <!--    Strings for Story Edit Own page-->
    <string name="your_stories">Your stories</string>
    <string name="close_friends">Close Friends</string>
    <string name="send_arrow_desc">Send</string>

    <!--    Strings for Post Image page-->
    <string name="recents_label">Recents</string>
    <string name="next_button">Next</string>
    <string name="select_multiple">SELECT MULTIPLE</string>
    <string name="library_label">Library</string>
    <string name="photo_label">Photo</string>
    <string name="video_label">Video</string>

    <!--    Strings for Other Profile Following page-->
    <string name="other_profile_username">kyan.coleman</string>
    <string name="other_profile_posts">151\nposts</string>
    <string name="other_profile_followers">112K\nfollowers</string>
    <string name="other_profile_following">162\nfollowing</string>
    <string name="other_profile_name">Kyan Coleman</string>
    <string name="profile_tag">kyan.coleman</string>
    <string name="profile_bio">Blogger\nAt vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecat... more</string>
    <string name="profile_website">kyan.co</string>
    <string name="followed_by">Followed by your friend, another friend and 297 others</string>
    <string name="other_message_button">Message</string>
    <string name="email_button">Email</string>
    <string name="following_button">Following</string>
    <string name="added_friend_button">Added</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>